[gd_scene load_steps=9 format=3 uid="uid://ca4ci8fw6jw1w"]

[ext_resource type="Texture2D" uid="uid://dv28st7f43j3j" path="res://assets/particle/body parts/PC_Limb_Attack.png" id="1_nth3o"]
[ext_resource type="Script" path="res://scripts/entity/PlayerAttack.gd" id="1_qge86"]
[ext_resource type="PackedScene" uid="uid://bn4mea0esy26a" path="res://prefabs/particles/fx_trail_blood_smoll.tscn" id="2_irh16"]
[ext_resource type="PackedScene" uid="uid://bokhqhugg843l" path="res://prefabs/particles/fx_explode_blood.tscn" id="3_h2b8p"]

[sub_resource type="Animation" id="Animation_w424b"]
resource_name = "Attack"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mage Limb:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mage Limb:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mage Limb/Limb/Elbow:scale_amount_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Mage Limb/Limb/Elbow:scale_amount_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.5]
}

[sub_resource type="Animation" id="Animation_rab24"]
resource_name = "Explode"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mage Limb:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Blood/Blood2:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Blood/Blood1:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Blood/Blood3:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Blood/Blood4:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ua6uw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mage Limb:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Mage Limb:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Mage Limb/Limb/Elbow:scale_amount_min")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Mage Limb/Limb/Elbow:scale_amount_max")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Blood/Blood2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Blood/Blood1:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Blood/Blood3:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Blood/Blood4:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfvun"]
_data = {
"Attack": SubResource("Animation_w424b"),
"Explode": SubResource("Animation_rab24"),
"RESET": SubResource("Animation_ua6uw")
}

[node name="Player Attack" type="Node2D"]
script = ExtResource("1_qge86")

[node name="Mage Limb" type="Node2D" parent="."]
visible = false
scale = Vector2(1e-05, 1e-05)

[node name="Limb" type="Sprite2D" parent="Mage Limb"]
rotation = 1.57079
scale = Vector2(0.6, -0.6)
texture = ExtResource("1_nth3o")
offset = Vector2(-14, 115)
hframes = 2

[node name="Elbow" parent="Mage Limb/Limb" instance=ExtResource("2_irh16")]
rotation = 1.57079
scale = Vector2(1.66667, -1.66667)

[node name="Blood" type="Node2D" parent="."]

[node name="Blood1" parent="Blood" instance=ExtResource("3_h2b8p")]
position = Vector2(110, 0)

[node name="Blood2" parent="Blood" instance=ExtResource("3_h2b8p")]
position = Vector2(72, 0)

[node name="Blood3" parent="Blood" instance=ExtResource("3_h2b8p")]
position = Vector2(36, 0)

[node name="Blood4" parent="Blood" instance=ExtResource("3_h2b8p")]

[node name="AttackPlayer_Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vfvun")
}

[node name="SendTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SendTimer" to="." method="_on_send_timer_timeout"]
